--- a/about.html
+++ b/about.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
 <head>
-    <title>About Us - Ceylon Sang</title>
+    <title>About Us - Wander Lanka Tours</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="description"
-        content="Learn about Ceylon Sang, your trusted travel partner in Sri Lanka committed to authentic and sustainable tourism.">
+        content="Learn about Wander Lanka Tours, your trusted travel partner in Sri Lanka committed to authentic and sustainable tourism.">
     <meta name="keywords"
-        content="about Ceylon Sang, Sri Lanka travel agency, sustainable tourism Sri Lanka, local tour guides">
+        content="about Wander Lanka Tours, Sri Lanka travel agency, sustainable tourism Sri Lanka, local tour guides">
     <link rel="canonical" href="https://www.ceylonsang.com/about.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.ceylonsang.com/about.html">
-    <meta property="og:title" content="About Us - Ceylon Sang">
+    <meta property="og:title" content="About Us - Wander Lanka Tours">
     <meta property="og:description" content="Your trusted guide to the Pearl of the Indian Ocean.">
     <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
     <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -42,7 +42,7 @@
     <!-- Premium Navigation -->
     <nav class="navbar" id="navbar">
         <div class="logo-container">
-            <h1 class="logo">Ceylon Sang</h1>
+            <h1 class="logo">Wander Lanka Tours</h1>
             <span class="tagline">SRI LANKAN TOUR GUIDE</span>
         </div>
 
@@ -80,7 +80,7 @@
                     <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
                                     class="fa fa-chevron-right"></i></a></span> <span>About Us <i
                                 class="fa fa-chevron-right"></i></span></p>
-                    <h1 class="mb-0 bread">About Ceylon Sang</h1>
+                    <h1 class="mb-0 bread">About Wander Lanka Tours</h1>
                 </div>
             </div>
         </div>
@@ -101,14 +101,15 @@
                                 <div class="col-md-12 heading-section ftco-animate">
                                     <span class="subheading">About Us</span>
                                     <h2 class="mb-4">Your Trusted Sri Lankan Tour Guide</h2>
-                                    <p>Welcome to Ceylon Sang, where we bring the magic of Sri Lanka to life through
+                                    <p>Welcome to Wander Lanka Tours, where we bring the magic of Sri Lanka to life
+                                        through
                                         authentic, personalized tour experiences. With over a decade of experience in
                                         the tourism industry, we pride ourselves on being more than just tour guides –
                                         we are your friends, storytellers, and companions on an unforgettable journey
                                         through the Pearl of the Indian Ocean.</p>
-                                    <p>Our name "Ceylon Sang" reflects our deep connection to Sri Lanka's rich heritage
+                                    <p>Our name "Wander Lanka Tours" reflects our deep connection to Sri Lanka's rich
+                                        heritage
                                         (Ceylon being the island's former name) and our commitment to being your
-                                        companion (Sang) throughout your adventure.</p>
                                 </div>
                             </div>
                         </div>
@@ -123,7 +124,7 @@
             <div class="row justify-content-center pb-4">
                 <div class="col-md-12 heading-section text-center ftco-animate">
                     <span class="subheading">Our Values</span>
-                    <h2 class="mb-4">Why Choose Ceylon Sang?</h2>
+                    <h2 class="mb-4">Why Choose Wander Lanka Tours?</h2>
                 </div>
             </div>
             <div class="row">
@@ -186,12 +187,13 @@
             <div class="row justify-content-center pb-4">
                 <div class="col-md-7 text-center heading-section ftco-animate">
                     <span class="subheading">Our Story</span>
-                    <h2 class="mb-4">The Ceylon Sang Journey</h2>
+                    <h2 class="mb-4">The Wander Lanka Tours Journey</h2>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12 ftco-animate">
-                    <p class="lead text-center mb-5">Ceylon Sang was born from a simple passion: sharing the incredible
+                    <p class="lead text-center mb-5">Wander Lanka Tours was born from a simple passion: sharing the
+                        incredible
                         beauty and rich culture of Sri Lanka with the world. What started as a small operation with a
                         single guide has grown into a trusted name in Sri Lankan tourism, but our core values remain
                         unchanged.</p>
@@ -222,7 +224,7 @@
                     <div class="img" style="background-image: url(images/bg_2.jpg);">
                         <div class="overlay"></div>
                         <h2>Ready to Explore Sri Lanka?</h2>
-                        <p>Let Ceylon Sang create your perfect Sri Lankan adventure</p>
+                        <p>Let Wander Lanka Tours create your perfect Sri Lankan adventure</p>
                         <p class="mb-0"><a href="contact.html" class="btn btn-primary px-4 py-3">Contact Us Today</a>
                         </p>
                     </div>
@@ -236,7 +238,7 @@
             <div class="row mb-5">
                 <div class="col-md pt-5">
                     <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">About Ceylon Sang</h2>
+                        <h2 class="ftco-heading-2">About Wander Lanka Tours</h2>
                         <p>Your trusted Sri Lankan tour guide, bringing you authentic experiences and unforgettable
                             memories across the Pearl of the Indian Ocean.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
@@ -279,10 +281,12 @@
                             <ul>
                                 <li><span class="icon fa fa-map-marker"></span><span class="text">Colombo, Sri
                                         Lanka</span></li>
-                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 77 123
-                                            4567</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 76 268
+                                            6428</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 71 181
+                                            8549</span></a></li>
                                 <li><a href="#"><span class="icon fa fa-paper-plane"></span><span
-                                            class="text">info@ceylonsang.com</span></a></li>
+                                            class="text">tourswanderlanka@gmail.com</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -291,7 +295,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p>Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> Ceylon Sang - All rights reserved
+                        <script>document.write(new Date().getFullYear());</script> Wander Lanka Tours - All rights
+                        reserved
                     </p>
                 </div>
             </div>
@@ -302,7 +307,7 @@
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Login to Ceylon Sang</h2>
+                <h2>Login to Wander Lanka Tours</h2>
                 <button class="close-modal" onclick="closeModal('loginModal')">&times;</button>
             </div>
             <div class="modal-body">
