--- a/destinations.html
+++ b/destinations.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
 <head>
-    <title>Sri Lanka Destinations - Ceylon Sang</title>
+    <title>Destinations - Wander Lanka Tours</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="description"
-        content="Explore top Sri Lankan destinations like Sigiriya, Ella, Galle, and Mirissa with Ceylon Sang's expert travel guides.">
+        content="Explore the best tourist destinations in Sri Lanka with Wander Lanka Tours. From ancient cities to pristine beaches and hill country.">
     <meta name="keywords"
-        content="Sri Lanka tourist places, Sigiriya rock fortress, Ella scenic train, Galle Fort, best places to visit in Sri Lanka">
+        content="Sri Lanka destinations, tourist places Sri Lanka, Wander Lanka Tours locations, travel guide Sri Lanka">
     <link rel="canonical" href="https://www.ceylonsang.com/destinations.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.ceylonsang.com/destinations.html">
-    <meta property="og:title" content="Sri Lanka Destinations - Ceylon Sang">
+    <meta property="og:title" content="Destinations - Wander Lanka Tours">
     <meta property="og:description" content="Discover the most beautiful places in Sri Lanka.">
     <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
     <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -43,7 +43,7 @@
 <body>
     <nav class="navbar" id="navbar">
         <div class="logo-container">
-            <h1 class="logo">Ceylon Sang</h1>
+            <h1 class="logo">Wander Lanka Tours</h1>
             <span class="tagline">SRI LANKAN TOUR GUIDE</span>
         </div>
 
@@ -2905,7 +2905,7 @@
             <div class="row mb-5">
                 <div class="col-md pt-5">
                     <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">About Ceylon Sang</h2>
+                        <h2 class="ftco-heading-2">About Wander Lanka Tours</h2>
                         <p>Your trusted Sri Lankan tour guide, bringing you authentic experiences and unforgettable
                             memories across the Pearl of the Indian Ocean.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
@@ -2948,10 +2948,12 @@
                             <ul>
                                 <li><span class="icon fa fa-map-marker"></span><span class="text">Colombo, Sri
                                         Lanka</span></li>
-                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 77 123
-                                            4567</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 76 268
+                                            6428</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 71 181
+                                            8549</span></a></li>
                                 <li><a href="#"><span class="icon fa fa-paper-plane"></span><span
-                                            class="text">info@ceylonsang.com</span></a></li>
+                                            class="text">tourswanderlanka@gmail.com</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -2960,7 +2962,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p>Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> Ceylon Sang - All rights reserved
+                        <script>document.write(new Date().getFullYear());</script> Wander Lanka Tours - All rights
+                        reserved
                     </p>
                 </div>
             </div>
@@ -2971,7 +2974,7 @@
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Login to Ceylon Sang</h2>
+                <h2>Login to Wander Lanka Tours</h2>
                 <button class="close-modal" onclick="closeModal('loginModal')">&times;</button>
             </div>
             <div class="modal-body">
