--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html lang="en">
 
 <head>
-    <title>Ceylon Sang - Premium Sri Lankan Tours & Holiday Packages</title>
+    <title>Wander Lanka Tours - Premium Sri Lankan Tours & Holiday Packages</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- SEO Meta Tags -->
     <meta name="description"
-        content="Discover Sri Lanka with Ceylon Sang. Tailor-made luxury tours, wildlife safaris, beach holidays, and cultural experiences in the Pearl of the Indian Ocean.">
+        content="Discover Sri Lanka with Wander Lanka Tours. Tailor-made luxury tours, wildlife safaris, beach holidays, and cultural experiences in the Pearl of the Indian Ocean.">
     <meta name="keywords"
         content="Sri Lanka tours, Ceylon travel, luxury holidays Sri Lanka, tour guide Sri Lanka, wildlife safari, cultural tourism">
-    <meta name="author" content="Ceylon Sang">
+    <meta name="author" content="Wander Lanka Tours">
     <link rel="canonical" href="https://www.ceylonsang.com/">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.ceylonsang.com/">
-    <meta property="og:title" content="Ceylon Sang - Premium Sri Lankan Tours">
+    <meta property="og:title" content="Wander Lanka Tours - Premium Sri Lankan Tours">
     <meta property="og:description"
         content="Experience the magic of Sri Lanka with expert local guidance. Book your perfect holiday today.">
     <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
@@ -25,7 +25,7 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.ceylonsang.com/">
-    <meta property="twitter:title" content="Ceylon Sang - Premium Sri Lankan Tours">
+    <meta property="twitter:title" content="Wander Lanka Tours - Premium Sri Lankan Tours">
     <meta property="twitter:description" content="Experience the magic of Sri Lanka with expert local guidance.">
     <meta property="twitter:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
 
@@ -34,7 +34,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600;700&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -51,7 +51,7 @@
 
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ceylon-sang.css?v=6">
+    <link rel="stylesheet" href="css/ceylon-sang.css?v=7">
     <link rel="stylesheet" href="css/ceylon-sang-grid.css">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
@@ -63,7 +63,7 @@
     <nav class="navbar" id="navbar">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <div class="logo-container">
-                <h1 class="logo">Ceylon Sang</h1>
+                <h1 class="logo">Wander Lanka Tours</h1>
                 <span class="tagline">SRI LANKAN TOUR GUIDEr</span>
             </div>
 
@@ -111,7 +111,7 @@
             <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center"
                 data-scrollax-parent="true">
                 <div class="col-md-10 text-center ftco-animate">
-                    <span class="subheading"><br /> to Ceylon Sang</span>
+                    <span class="subheading"><br /> to Wander Lanka Tours</span>
                     <h1 class="mb-4">Discover the Pearl of the Indian Ocean</h1>
                     <p class="caps mb-4">Experience the magic of Sri Lanka with expert local guidance</p>
 
@@ -243,9 +243,9 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10 heading-section text-center ftco-animate">
-                    <span class="subheading">Welcome to Ceylon Sang</span>
+                    <span class="subheading">Welcome to Wander Lanka Tours</span>
                     <h2 class="mb-4">Your Gateway to Sri Lankan Adventures</h2>
-                    <p>With years of experience in showcasing the beauty of Sri Lanka, Ceylon Sang offers
+                    <p>With years of experience in showcasing the beauty of Sri Lanka, Wander Lanka Tours offers
                         personalized tour experiences that capture the essence of this magnificent island. From
                         pristine beaches to ancient temples, lush tea plantations to wildlife safaris, we bring you
                         the best of Sri Lanka.</p>
@@ -407,7 +407,7 @@
                     <div class="img" style="background-image: url(images/bg_2.jpg);">
                         <div class="overlay"></div>
                         <h2>Ready to Explore Sri Lanka?</h2>
-                        <p>Let Ceylon Sang create your perfect Sri Lankan adventure</p>
+                        <p>Let Wander Lanka Tours create your perfect Sri Lankan adventure</p>
                         <p class="mb-0"><a href="contact.html" class="btn btn-primary px-4 py-3">Contact Us Today</a>
                         </p>
                     </div>
@@ -422,7 +422,7 @@
             <div class="row mb-5">
                 <div class="col-md pt-5">
                     <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">About Ceylon Sang</h2>
+                        <h2 class="ftco-heading-2">About Wander Lanka Tours</h2>
                         <p>Your trusted Sri Lankan tour guide, bringing you authentic experiences and unforgettable
                             memories across the Pearl of the Indian Ocean.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
@@ -465,10 +465,11 @@
                             <ul>
                                 <li><span class="icon fa fa-map-marker"></span><span class="text">Colombo, Sri
                                         Lanka</span></li>
-                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 77 123
-                                            4567</span></a></li>
-                                <li><a href="#"><span class="icon fa fa-paper-plane"></span><span
-                                            class="text">info@ceylonsang.com</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 76 268
+                                            6428</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 71 181
+                                            8549</span></a></li>
+                                class="text">tourswanderlanka@gmail.com</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -477,7 +478,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p>Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> Ceylon Sang - All rights reserved
+                        <script>document.write(new Date().getFullYear());</script> Wander Lanka Tours - All rights
+                        reserved
                     </p>
                 </div>
             </div>
@@ -510,26 +512,72 @@
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Login to Ceylon Sang</h2>
+                <div>
+                    <h2>Welcome Back</h2>
+                    <p>Login to Wander Lanka Tours to continue your journey</p>
+                </div>
                 <button class="close-modal" onclick="closeModal('loginModal')">&times;</button>
             </div>
             <div class="modal-body">
                 <div id="loginError" class="error-message"></div>
                 <form id="loginForm">
-                    <div class="form-group">
+                    <div class="input-group">
+                        <span class="fa fa-envelope input-icon"></span>
+                        <input type="email" id="loginEmail" name="email" required placeholder=" ">
                         <label for="loginEmail">Email Address</label>
-                        <input type="email" id="loginEmail" name="email" required placeholder="Enter your email">
                     </div>
-                    <div class="form-group">
+                    <div class="input-group">
+                        <span class="fa fa-lock input-icon"></span>
+                        <input type="password" id="loginPassword" name="password" required placeholder=" ">
                         <label for="loginPassword">Password</label>
-                        <input type="password" id="loginPassword" name="password" required
-                            placeholder="Enter your password">
+                        <span class="fa fa-eye toggle-password" onclick="togglePassword('loginPassword', this)"></span>
                     </div>
-                    <button type="submit" class="btn-auth">Login</button>
+
+                    <div class="extra-links">
+                        <a href="#" onclick="switchToForgot(event)" class="forgot-link">Forgot Password?</a>
+                    </div>
+
+                    <button type="submit" class="btn-auth">
+                        <span>Login to Account</span>
+                    </button>
+                </form>
+
+                <div class="divider">OR</div>
+
+                <div class="modal-footer" style="background: none; border: none; padding: 0;">
+                    <p>Don't have an account? <a onclick="switchToSignup()">Sign up here</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Forgot Password Modal -->
+    <div id="forgotModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <div>
+                    <h2>Reset Password</h2>
+                    <p>We'll help you get back comfortably</p>
+                </div>
+                <button class="close-modal" onclick="closeModal('forgotModal')">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div id="forgotError" class="error-message"></div>
+                <div id="forgotSuccess" class="success-message"></div>
+                <p style="margin-bottom: 25px; color: #666; font-size: 0.95rem; text-align: center;">Do not worry! Enter
+                    your email address associated with your account and we will send you a link to reset your password.
+                </p>
+                <form id="forgotForm">
+                    <div class="input-group">
+                        <span class="fa fa-envelope input-icon"></span>
+                        <input type="email" id="forgotEmail" name="email" required placeholder=" ">
+                        <label for="forgotEmail">Email Address</label>
+                    </div>
+                    <button type="submit" class="btn-auth">Send Reset Link</button>
                 </form>
             </div>
             <div class="modal-footer">
-                <p>Don't have an account? <a onclick="switchToSignup()">Sign up here</a></p>
+                <p>Remembered it? <a onclick="switchToLogin()">Login here</a></p>
             </div>
         </div>
     </div>
@@ -538,35 +586,45 @@
     <div id="signupModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Create Account</h2>
+                <div>
+                    <h2>Create Account</h2>
+                    <p>Join us for exclusive experiences</p>
+                </div>
                 <button class="close-modal" onclick="closeModal('signupModal')">&times;</button>
             </div>
             <div class="modal-body">
                 <div id="signupError" class="error-message"></div>
                 <form id="signupForm">
-                    <div class="form-group">
+                    <div class="input-group">
+                        <span class="fa fa-user input-icon"></span>
+                        <input type="text" id="signupName" name="name" required placeholder=" ">
                         <label for="signupName">Full Name</label>
-                        <input type="text" id="signupName" name="name" required placeholder="Enter your full name">
                     </div>
-                    <div class="form-group">
+                    <div class="input-group">
+                        <span class="fa fa-envelope input-icon"></span>
+                        <input type="email" id="signupEmail" name="email" required placeholder=" ">
                         <label for="signupEmail">Email Address</label>
-                        <input type="email" id="signupEmail" name="email" required placeholder="Enter your email">
                     </div>
-                    <div class="form-group">
+                    <div class="input-group">
+                        <span class="fa fa-lock input-icon"></span>
+                        <input type="password" id="signupPassword" name="password" required placeholder=" ">
                         <label for="signupPassword">Password</label>
-                        <input type="password" id="signupPassword" name="password" required
-                            placeholder="At least 6 characters">
+                        <span class="fa fa-eye toggle-password" onclick="togglePassword('signupPassword', this)"></span>
                     </div>
-                    <div class="form-group">
-                        <label for="signupConfirmPassword">Confirm Password</label>
+                    <div class="input-group">
+                        <span class="fa fa-lock input-icon"></span>
                         <input type="password" id="signupConfirmPassword" name="confirmPassword" required
-                            placeholder="Re-enter your password">
+                            placeholder=" ">
+                        <label for="signupConfirmPassword">Confirm Password</label>
                     </div>
                     <button type="submit" class="btn-auth">Create Account</button>
                 </form>
-            </div>
-            <div class="modal-footer">
-                <p>Already have an account? <a onclick="switchToLogin()">Login here</a></p>
+
+                <div class="divider">OR</div>
+
+                <div class="modal-footer" style="background: none; border: none; padding: 0;">
+                    <p>Already have an account? <a onclick="switchToLogin()">Login here</a></p>
+                </div>
             </div>
         </div>
     </div>
