--- a/services.html
+++ b/services.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
 <head>
-    <title>Our Services - Ceylon Sang</title>
+    <title>Our Services - Wander Lanka Tours</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="description"
         content="Luxury travel services in Sri Lanka including airport transfers, guided tours, accommodation booking, and wildlife safaris.">
     <meta name="keywords"
-        content="Sri Lanka travel services, airport transfer Colombo, Sri Lanka hotel booking, guided tours Sri Lanka">
+        content="Explore the wide range of travel services offered by Wander Lanka Tours. Fromguided tours to wildlife safaris and event management.">
     <link rel="canonical" href="https://www.ceylonsang.com/services.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.ceylonsang.com/services.html">
-    <meta property="og:title" content="Our Services - Ceylon Sang">
+    <meta property="og:title" content="Our Services - Wander Lanka Tours">
     <meta property="og:description" content="Professional travel services for a hassle-free Sri Lankan holiday.">
     <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/services.jpg">
 
     <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -41,7 +41,7 @@
 <body>
     <nav class="navbar" id="navbar">
         <div class="logo-container">
-            <h1 class="logo">Ceylon Sang</h1>
+            <h1 class="logo">Wander Lanka Tours</h1>
             <span class="tagline">SRI LANKAN TOUR GUIDE</span>
         </div>
 
@@ -91,8 +91,9 @@
                 <div class="col-md-12 heading-section text-center ftco-animate">
                     <span class="subheading">What We Offer</span>
                     <h2 class="mb-4">Comprehensive Tour Services</h2>
-                    <p>Ceylon Sang offers a wide range of professional tour services designed to make your Sri Lankan
-                        adventure unforgettable, safe, and perfectly tailored to your needs.</p>
+                    <p>At Wander Lanka Tours, we offer comprehensive travel services tailored to your needs. From
+                        airport transfers to guided tours and event management, we ensure your Sri Lankan adventure is
+                        unforgettable, safe, and perfectly tailored to your needs.</p>
                 </div>
             </div>
 
@@ -134,7 +135,7 @@
                 </div>
                 <div class="col-md-6 ftco-animate">
                     <div class="pr-md-5">
-                        <h2 class="mb-4">Wildlife Safari Adventures</h2>
+                        <h1 class="mb-3">Experience Sri Lanka with Wander Lanka Tours</h1>
                         <p>Experience the thrill of encountering Sri Lanka's incredible wildlife in their natural
                             habitats. Our safari tours offer the best chances to see elephants, leopards, sloth bears,
                             and exotic birds.</p>
@@ -329,7 +330,7 @@
             <div class="row mb-5">
                 <div class="col-md pt-5">
                     <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">About Ceylon Sang</h2>
+                        <h2 class="ftco-heading-2">About Wander Lanka Tours</h2>
                         <p>Your trusted Sri Lankan tour guide, bringing you authentic experiences and unforgettable
                             memories across the Pearl of the Indian Ocean.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
@@ -372,10 +373,12 @@
                             <ul>
                                 <li><span class="icon fa fa-map-marker"></span><span class="text">Colombo, Sri
                                         Lanka</span></li>
-                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 77 123
-                                            4567</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 76 268
+                                            6428</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 71 181
+                                            8549</span></a></li>
                                 <li><a href="#"><span class="icon fa fa-paper-plane"></span><span
-                                            class="text">info@ceylonsang.com</span></a></li>
+                                            class="text">tourswanderlanka@gmail.com</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -384,7 +387,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p>Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> Ceylon Sang - All rights reserved
+                        <script>document.write(new Date().getFullYear());</script> Wander Lanka Tours - All rights
+                        reserved
                     </p>
                 </div>
             </div>
@@ -395,7 +399,7 @@
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Login to Ceylon Sang</h2>
+                <h2>Login to Wander Lanka Tours</h2>
                 <button class="close-modal" onclick="closeModal('loginModal')">&times;</button>
             </div>
             <div class="modal-body">
