--- a/contact.html
+++ b/contact.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
 <head>
-    <title>Contact Us - Ceylon Sang</title>
+    <title>Contact Us - Wander Lanka Tours</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="description"
-        content="Get in touch with Ceylon Sang for personalized Sri Lankan tour packages. Available via email, phone, and WhatsApp.">
+        content="Get in touch with Wander Lanka Tours for personalized Sri Lankan tour packages. Available via email, phone, and WhatsApp.">
     <meta name="keywords"
-        content="contact Ceylon Sang, book Sri Lanka tour, travel agency Sri Lanka contact, tour inquiries">
+        content="contact Wander Lanka Tours, book Sri Lanka tour, travel agency Sri Lanka contact, tour inquiries">
     <link rel="canonical" href="https://www.ceylonsang.com/contact.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.ceylonsang.com/contact.html">
-    <meta property="og:title" content="Contact Us - Ceylon Sang">
+    <meta property="og:title" content="Contact Us - Wander Lanka Tours">
     <meta property="og:description" content="Plan your perfect Sri Lankan holiday. Contact our expert team today.">
     <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
     <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -33,16 +33,17 @@
     <link rel="stylesheet" href="css/jquery.timepicker.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ceylon-sang.css?v=6">
+    <link rel="stylesheet" href="css/ceylon-sang.css?v=7">
     <link rel="stylesheet" href="css/mobile-enhancements.css">
     <link rel="stylesheet" href="css/auth-modal.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 
 <body>
     <!-- Premium Navigation -->
     <nav class="navbar" id="navbar">
         <div class="logo-container">
-            <h1 class="logo">Ceylon Sang</h1>
+            <h1 class="logo">Wander Lanka Tours</h1>
             <span class="tagline">SRI LANKAN TOUR GUIDE</span>
         </div>
 
@@ -107,8 +108,8 @@
                     <div class="contact-info-item text-center">
                         <div class="icon"><span class="fa fa-phone"></span></div>
                         <h3>Phone</h3>
-                        <p><a href="tel:+94771234567">+94 77 123 4567</a><br>
-                            <a href="tel:+94112345678">+94 11 234 5678</a>
+                        <p><a href="tel:+94762686428">+94 76 268 6428</a><br>
+                            <a href="tel:+94711818549">+94 71 181 8549</a>
                         </p>
                     </div>
                 </div>
@@ -116,30 +117,32 @@
                     <div class="contact-info-item text-center">
                         <div class="icon"><span class="fa fa-paper-plane"></span></div>
                         <h3>Email</h3>
-                        <p><a href="mailto:info@ceylonsang.com">info@ceylonsang.com</a><br>
-                            <a href="mailto:tours@ceylonsang.com">tours@ceylonsang.com</a>
+                        <p><a href="mailto:tourswanderlanka@gmail.com">tourswanderlanka@gmail.com</a>
                         </p>
                     </div>
                 </div>
             </div>
             <div class="row block-9">
                 <div class="col-md-6 order-md-last d-flex">
-                    <form action="#" class="contact-form bg-light p-5">
+                    <form id="contactForm" class="contact-form bg-light p-5">
                         <h3 class="mb-4">Send Us a Message</h3>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Your Name *" required>
+                            <input type="text" name="user_name" id="user_name" class="form-control"
+                                placeholder="Your Name *" required>
                         </div>
                         <div class="form-group">
-                            <input type="email" class="form-control" placeholder="Your Email *" required>
+                            <input type="email" name="user_email" id="user_email" class="form-control"
+                                placeholder="Your Email *" required>
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Phone Number">
+                            <input type="text" name="contact_number" id="contact_number" class="form-control"
+                                placeholder="Phone Number">
                         </div>
                         <div class="form-group">
-                            <input type="text" class="form-control" placeholder="Subject">
+                            <input type="text" name="subject" id="subject" class="form-control" placeholder="Subject">
                         </div>
                         <div class="form-group">
-                            <select class="form-control">
+                            <select name="tour_package" id="tour_package" class="form-control">
                                 <option value="">Select Tour Package (Optional)</option>
                                 <option value="cultural">Cultural Triangle Explorer</option>
                                 <option value="beach-wildlife">Beach & Wildlife Safari</option>
@@ -153,9 +156,11 @@
                             </select>
                         </div>
                         <div class="form-group">
-                            <textarea cols="30" rows="7" class="form-control" placeholder="Your Message *"
-                                required></textarea>
+                            <textarea name="message" id="message" cols="30" rows="7" class="form-control"
+                                placeholder="Your Message *" required></textarea>
                         </div>
+                        <!-- Response Message -->
+                        <div id="form-message" class="alert" style="display:none; margin-bottom: 20px;"></div>
                         <div class="action-area-wrapper">
                             <button type="submit" class="btn-premium-primary">
                                 <i class="fa fa-envelope"></i> Send Message
@@ -167,7 +172,7 @@
                                 <span class="divider-line"></span>
                             </div>
 
-                            <a href="https://wa.me/94771234567?text=Hi,%20I'm%20interested%20in%20Ceylon%20Sang%20Tours"
+                            <a href="https://wa.me/94762686428?text=Hi,%20I'm%20interested%20in%20Wander%20Lanka%20Tours"
                                 class="btn-premium-secondary" target="_blank">
                                 <div class="btn-label">
                                     <i class="fa fa-whatsapp"></i> Chat on WhatsApp
@@ -196,7 +201,7 @@
                 <div class="col-md-7 text-center heading-section ftco-animate">
                     <span class="subheading">Testimonials</span>
                     <h2 class="mb-4">What Our Travelers Say</h2>
-                    <p>Read reviews from tourists who have experienced Sri Lanka with Ceylon Sang</p>
+                    <p>Read reviews from tourists who have experienced Sri Lanka with Wander Lanka Tours</p>
                 </div>
             </div>
             <div class="row ftco-animate">
@@ -278,7 +283,7 @@
                         <div class="form-group">
                             <label for="review-text">Your Review *</label>
                             <textarea class="form-control" id="review-text" rows="5"
-                                placeholder="Share your experience with Ceylon Sang..." required></textarea>
+                                placeholder="Share your experience with Wander Lanka Tours..." required></textarea>
                         </div>
                         <div class="form-group">
                             <input type="submit" value="Submit Review" class="btn btn-primary py-3 px-5"
@@ -303,21 +308,21 @@
                     <div class="contact-info-item">
                         <div class="icon"><span class="fa fa-facebook"></span></div>
                         <h3>Facebook</h3>
-                        <p><a href="#">@CeylonSangTours</a></p>
+                        <p><a href="#">@WanderLankaTours</a></p>
                     </div>
                 </div>
                 <div class="col-md-3 ftco-animate text-center">
                     <div class="contact-info-item">
                         <div class="icon"><span class="fa fa-instagram"></span></div>
                         <h3>Instagram</h3>
-                        <p><a href="#">@ceylonsang</a></p>
+                        <p><a href="#">@wanderlankatours</a></p>
                     </div>
                 </div>
                 <div class="col-md-3 ftco-animate text-center">
                     <div class="contact-info-item">
                         <div class="icon"><span class="fa fa-twitter"></span></div>
                         <h3>Twitter</h3>
-                        <p><a href="#">@CeylonSang</a></p>
+                        <p><a href="#">@WanderLankaTours</a></p>
                     </div>
                 </div>
                 <div class="col-md-3 ftco-animate text-center">
@@ -336,7 +341,7 @@
             <div class="row mb-5">
                 <div class="col-md pt-5">
                     <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">About Ceylon Sang</h2>
+                        <h2 class="ftco-heading-2">About Wander Lanka Tours</h2>
                         <p>Your trusted Sri Lankan tour guide, bringing you authentic experiences and unforgettable
                             memories across the Pearl of the Indian Ocean.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
@@ -379,10 +384,12 @@
                             <ul>
                                 <li><span class="icon fa fa-map-marker"></span><span class="text">Colombo, Sri
                                         Lanka</span></li>
-                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 77 123
-                                            4567</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 76 268
+                                            6428</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 71 181
+                                            8549</span></a></li>
                                 <li><a href="#"><span class="icon fa fa-paper-plane"></span><span
-                                            class="text">info@ceylonsang.com</span></a></li>
+                                            class="text">tourswanderlanka@gmail.com</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -391,7 +398,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p>Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> Ceylon Sang - All rights reserved
+                        <script>document.write(new Date().getFullYear());</script> Wander Lanka Tours - All rights
+                        reserved
                     </p>
                 </div>
             </div>
@@ -423,7 +431,7 @@
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Login to Ceylon Sang</h2>
+                <h2>Login to Wander Lanka Tours</h2>
                 <button class="close-modal" onclick="closeModal('loginModal')">&times;</button>
             </div>
             <div class="modal-body">
@@ -485,9 +493,10 @@
     </div>
 
     <script src="js/auth.js" defer></script>
+    <script src="js/contact-form.js" defer></script>
     <script src="js/edit-flow.js" defer></script>
     <script src="js/reviews.js" defer></script>
-    <script src="js/contact-validate.js" defer></script>
+
 </body>
 
 </html>
