--- a/gallery.html
+++ b/gallery.html
@@ -2,27 +2,27 @@
 <html lang="en">
 
 <head>
-    <title>Photo Gallery - Ceylon Sang</title>
+    <title>Gallery - Wander Lanka Tours</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <meta name="description"
-        content="View stunning photos of Sri Lanka's landscapes, wildlife, and culture from our satisfied travelers.">
+        content="View our gallery of stunning photos from tours organized by Wander Lanka Tours. Get inspired for your next Sri Lankan adventure.">
     <meta name="keywords"
-        content="Sri Lanka travel photos, Ceylon Sang gallery, wildlife photography Sri Lanka, travel inspiration">
+        content="Sri Lanka tour photos, travel gallery, Wander Lanka Tours images, traveler experiences Sri Lanka, travel inspiration">
     <link rel="canonical" href="https://www.ceylonsang.com/gallery.html">
 
     <!-- Open Graph -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.ceylonsang.com/gallery.html">
-    <meta property="og:title" content="Photo Gallery - Ceylon Sang">
+    <meta property="og:title" content="Gallery - Wander Lanka Tours">
     <meta property="og:description" content="See the beauty of Sri Lanka through our lens.">
     <meta property="og:image" content="https://www.ceylonsang.com/images/bg_1.jpg">
 
     <link rel="preload" as="image" href="images/bg_1.jpg">
 
     <link
-        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Poppins:wght@300;400;500;600;700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&family=Open+Sans:wght@300;400;600;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -63,7 +63,7 @@
     <nav class="navbar" id="navbar">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <div class="logo-container">
-                <h1 class="logo">Ceylon Sang</h1>
+                <h1 class="logo">Wander Lanka Tours</h1>
                 <span class="tagline">SRI LANKAN TOUR GUIDE</span>
             </div>
 
@@ -104,7 +104,7 @@
                     <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home <i
                                     class="fa fa-chevron-right"></i></a></span> <span>Gallery <i
                                 class="fa fa-chevron-right"></i></span></p>
-                    <h1 class="mb-0 bread">Photo Gallery</h1>
+                    <h1 class="mb-0 bread">Wander Lanka Tours Gallery</h1>
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
             <div class="row justify-content-center pb-4">
                 <div class="col-md-12 heading-section text-center ftco-animate">
                     <span class="subheading">Our Adventures</span>
-                    <h2 class="mb-4">Captured Moments with Our Travelers</h2>
+                    <h2 class="mb-4">Moments Captured by Wander Lanka Tours</h2>
                     <p>Explore the beautiful memories we've created with tourists from around the world</p>
                 </div>
             </div>
@@ -392,7 +392,7 @@
             <div class="row mb-5">
                 <div class="col-md pt-5">
                     <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">About Ceylon Sang</h2>
+                        <h2 class="ftco-heading-2">About Wander Lanka Tours</h2>
                         <p>Your trusted Sri Lankan tour guide, bringing you authentic experiences and unforgettable
                             memories across the Pearl of the Indian Ocean.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
@@ -435,10 +435,12 @@
                             <ul>
                                 <li><span class="icon fa fa-map-marker"></span><span class="text">Colombo, Sri
                                         Lanka</span></li>
-                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 77 123
-                                            4567</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 76 268
+                                            6428</span></a></li>
+                                <li><a href="#"><span class="icon fa fa-phone"></span><span class="text">+94 71 181
+                                            8549</span></a></li>
                                 <li><a href="#"><span class="icon fa fa-paper-plane"></span><span
-                                            class="text">info@ceylonsang.com</span></a></li>
+                                            class="text">tourswanderlanka@gmail.com</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -447,7 +449,8 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p>Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> Ceylon Sang - All rights reserved
+                        <script>document.write(new Date().getFullYear());</script> Wander Lanka Tours - All rights
+                        reserved
                     </p>
                 </div>
             </div>
@@ -458,7 +461,7 @@
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Login to Ceylon Sang</h2>
+                <h2>Login to Wander Lanka Tours</h2>
                 <button class="close-modal" onclick="closeModal('loginModal')">&times;</button>
             </div>
             <div class="modal-body">
