--- a/profile.html
+++ b/profile.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>My Profile - Ceylon Sang</title>
+    <title>My Profile - Wander Lanka Tours</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="preload" as="image" href="images/bg_1.jpg">
@@ -33,7 +33,7 @@
     <nav class="navbar" id="navbar">
         <div class="container-fluid d-flex align-items-center justify-content-between">
             <div class="logo-container">
-                <h1 class="logo">Ceylon Sang</h1>
+                <h1 class="logo">Wander Lanka Tours</h1>
                 <span class="tagline">SRI LANKAN TOUR GUIDE</span>
             </div>
 
@@ -171,7 +171,7 @@
             <div class="row mb-5">
                 <div class="col-md pt-5">
                     <div class="ftco-footer-widget pt-md-5 mb-4">
-                        <h2 class="ftco-heading-2">About Ceylon Sang</h2>
+                        <h2 class="ftco-heading-2">About Wander Lanka Tours</h2>
                         <p>Your trusted Sri Lankan tour guide.</p>
                         <ul class="ftco-footer-social list-unstyled float-md-left float-lft">
                             <li class="ftco-animate"><a href="#"><span class="fa fa-twitter"></span></a></li>
@@ -185,7 +185,7 @@
             <div class="row">
                 <div class="col-md-12 text-center">
                     <p>Copyright &copy;
-                        <script>document.write(new Date().getFullYear());</script> Ceylon Sang
+                        <script>document.write(new Date().getFullYear());</script> Wander Lanka Tours
                     </p>
                 </div>
             </div>
@@ -196,7 +196,7 @@
     <div id="loginModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2>Login to Ceylon Sang</h2>
+                <h2>Login to Wander Lanka Tours</h2>
                 <button class="close-modal" onclick="closeModal('loginModal')">&times;</button>
             </div>
             <div class="modal-body">
